Creates html elements

--- a/MSDropDown/index.html
+++ b/MSDropDown/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <link rel="stylesheet" href="MSDD.css">
+</head>
 <body>
     <script type="module" src="MSDD.js"></script>
     <multi-select-drop-down></multi-select-drop-down>
+    
 </body>
